test/e2e/fail_compile/generics/where_runtime_only.cst
runtime fn runtime_true() -> bool {
    true
}

fn id<T>(value: T) -> T where runtime_true() {
    value
}

fn main() -> num {
    id(0)
}
